add: SimpleDeviceResource & abstract for PaginationCollection
